--- a/build.gradle
+++ b/build.gradle
@@ -62,4 +62,4 @@ distZip {
     archiveName = baseName + ".zip"
 }
 
-mainClassName = 'StartDashBoard'
+mainClassName = 'com.adscoop.StartDashBoard'
